src/test/deca/syntax/valid/created/type_alone/NULL_alone.deca
// Description :
// 		Test utilisation type seul
// Resultats:
// 		OK

{
    null;
}
