src/test/deca/syntax/invalid/created/bloc_alone/if_alone.deca
// Description:
//  	Utilisant identifiant de bloc seul
// Resultats :
// 		Ligne 8 : mismatched input ';' expecting '('


{
	if;
}
